# fast-video-segmentation

./: README.md  generate_resnet_features.py  generate_testcase.py  inference_resnet_segnet.py  inference_resnet_segnet_video.py  pyproject.toml  train_decision_network.py
model/: flownet_s.py  flownetmodel.py  resnet_segnet.py
