[tool.poetry]
name = "fast-video-segmentation"
version = "1.0.0"
description = ""
authors = ["Omkar Mujgond <oms.mails@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.10"

[tool.poetry.dev-dependencies]
tensorflow = "1.14"
numpy = "^1.13.3"
Pillow = "^4.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
